PN-16717 - Fix to correctly validate CIE using RSAPSS encryption algorithm